--- a/package.json
+++ b/package.json
@@ -1,27 +1,40 @@
 {
-  "name": "electron-quick-start-typescript",
-  "version": "1.0.0",
-  "description": "A minimal Electron application written with Typescript",
+  "name": "eye-care-app",
+  "version": "0.1.0",
+  "productName": "EyeCare App",
+  "description": "App to care about your eyesight.",
+  "main": "./dist/main.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
     "lint": "tslint -c tslint.json -p tsconfig.json",
-    "start": "npm run build && electron ./dist/main.js"
+    "start": "npm run build && electron ./dist/main.js",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
   "repository": "https://github.com/electron/electron-quick-start-typescript",
   "keywords": [
+    "EyeCareApp",
     "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo",
     "typescript"
   ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "author": "Michal Ciesliczka <michal.ciesliczka@gmail.com> (https://github.com/MichalCiesliczka)",
+  "license": "MIT",
   "devDependencies": {
     "electron": "^4.0.0",
+    "electron-builder": "^20.38.4",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
+  },
+  "build": {
+    "productName": "EyeCare App",
+    "appId": "com.eyecare.app",
+    "files": [
+      "dist/",
+      "assets/",
+      "node_modules/",
+      "index.html",
+      "package.json"
+    ]
   }
 }
